k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificaciones
  namespace: devops-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notificaciones
  template:
    metadata:
      labels:
        app: notificaciones
    spec:
      containers:
      - name: app
        image: robertobreuer/notificaciones:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
