k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notificaciones-service
  namespace: devops-lab
spec:
  selector:
    app: notificaciones
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30696
  type: NodePort
