k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notificaciones-ingress
  namespace: devops-lab
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: notificaciones.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notificaciones-service
            port:
              number: 80
